tp_docker/front-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: truitedockerhub/frontend:1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: truitedockerhub/backend:1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - name: http
      targetPort: 8080
      port: 8080
  type: NodePort
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - name: http
      targetPort: 5000
      port: 5000
  type: ClusterIP
